Fix error in delete option for articles

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: myapp_development
+  database: aldana
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: myapp_production
-  username: myapp
+  username: aldana
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
